# cuda-practice

./: README.md  pyproject.toml
lecture-1/: hello_load_inline.py  load_inline.py  pytorch_square.py
lecture-1/load_inline_cuda/: .ninja_deps  .ninja_log  build.ninja  cuda.cu
lecture-1/tmp/: .ninja_deps  .ninja_log  build.ninja
