[tool.poetry]
name = "cuda-practice"
version = "0.1.0"
description = ""
authors = ["manoflearning <77jwk0724@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
numpy = "^2.1.1"
ninja = "^1.11.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
